fix(message): fix text alignments
changed styles for start mixing to propagate to comp

--- a/src/app/core/components/message/message.component.scss
+++ b/src/app/core/components/message/message.component.scss
@@ -6,6 +6,7 @@
   .message-content {
     @include flex-row();
     @include start();
+    @include fill();
     padding: $spacing * 0.6;
   }
   .message-dismiss {
