--- a/src/theme/_mixins.scss
+++ b/src/theme/_mixins.scss
@@ -22,7 +22,7 @@
 }
 @mixin start {
   justify-content: start;
-  align-items: start;
+  align-items: center;
 }
 @mixin end {
   justify-content: end;
